--- a/technical_documentation/styles.css
+++ b/technical_documentation/styles.css
@@ -64,6 +64,83 @@ button:active {
     background-color: var(--blue);
 }
 
+/********************************************/
+/* bootstrap burger menu */
+
+.burger_menu {
+    width: 30px;
+    height: 20px;
+    position: relative;
+    margin: 0px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+    }
+    
+    .burger_menu span {
+    display: block;
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+    }
+    
+    .burger_menu span {
+    background: #2d7ef7;
+    }
+    
+    
+    
+    .burger_menu span:nth-child(1) {
+    top: 0px;
+    }
+    
+    .burger_menu span:nth-child(2) {
+    top: 10px;
+    }
+    
+    .burger_menu span:nth-child(3) {
+    top: 20px;
+    }
+    
+    .burger_menu.open span:nth-child(1) {
+    top: 11px;
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
+    transform: rotate(135deg);
+    }
+    
+    .burger_menu.open span:nth-child(2) {
+    opacity: 0;
+    left: -60px;
+    }
+    
+    .burger_menu.open span:nth-child(3) {
+    top: 11px;
+    -webkit-transform: rotate(-135deg);
+    -moz-transform: rotate(-135deg);
+    -o-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+    }
+/********************************************/
+
 /* links styling */
 a {
     text-decoration: none;
